-Support for kafka-sink Signed-off-by: rajeshLovesToCode <rajesh.dharamdasani3021@gmail.com>